# Robotics_Project2

./: CMakeLists.txt  README.txt  frames.dot  package.xml
launch/: amcl.xml  gmapping_launch.launch  gmapping_launch.xml  robot_localization.launch
maps/: map_bag1.pgm  map_bag1.yaml  map_bag2.pgm  map_bag2.yaml  map_bag3.pgm  map_bag3.yaml
params/: ekf_template_odom.yaml
rviz/: robot_gmap.rviz  robot_local.rviz
src/: imu_camera_republisher.cpp
